# rat-common

./: .gitignore  Makefile  Makefile.am  config.status  configure.ac  librat.spec.in  libtool  libuclmmbase.pc.in
debian/: .gitignore  changelog  control
doc/: .gitignore  Makefile.in
examples/: Makefile.am
examples/rtp/: Makefile  Makefile.am  rtpdemo
examples/sap/: Makefile  Makefile.am  sapdemo
examples/sdp/: Makefile  Makefile.am  sdpdemo
src/: Makefile  Makefile.am  addrinfo.h  asarray.c  asarray.h  btree.c  config.h.in  config_unix.h  config_win32.h  debug.c  debug.h  libuclmmbase.la  mbus.c  mbus.h  mbus_config.c  mbus_config.h  memory.c  memory.h  net_udp.c  ntp.c  qfDES.c  rtp.c  rtp.h  sap.c  sap.h  sdp.c  sdp.h  stamp-h1  uclconf.h  util.c  util.h  version.h
src/.libs/: libuclmmbase.la  libuclmmbase.lai  libuclmmbase.so.1  libuclmmbase.so.1.0.0
tests/: Makefile  Makefile.am  test-libcommon  test_aes.c
